add translation & import scripts

--- a/shop/templates/base.html.twig
+++ b/shop/templates/base.html.twig
@@ -13,7 +13,8 @@
 <body>
 {% include "_partials/_navbar.html.twig" %}
 {% block body %}{% endblock %}
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
+<script src="{{ asset('js/jquery-3/jquery.slim.min.js') }}"></script>
+<script src="{{ asset('js/bootstrap-4/bootstrap.bundle.min.js') }}"></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
