add categories pages

--- a/shop/templates/default/contact.html.twig
+++ b/shop/templates/default/contact.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Yoshop - Accueil{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block body %}
-<h1> Guest </h1>
+<h1> Contact </h1>
 {% endblock %}
