--- a/shop/public/css/projet.css
+++ b/shop/public/css/projet.css
@@ -1,58 +1,62 @@
 body {
-    padding-top: 5rem;
-    background-color: #eee;
+  background-color: #eee;
+}
+
+a {
+  color: inherit;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .main-div {
-    padding: 10px;
-    text-align: center;
+  padding: 10px;
+  text-align: center;
 }
 
 .clickable:hover {
-    border-width: 3px;
-    border-color: #0069D9;
-    cursor: pointer;
-    background-color: white;
+  border-width: 3px;
+  border-color: #0069d9;
+  cursor: pointer;
+  background-color: white;
 }
 
 .card {
-    margin-bottom: 25px;
-    border-width: 3px;
-    padding: 5px;
+  margin-bottom: 25px;
+  border-width: 3px;
+  padding: 5px;
 }
 
 .card-img {
-    height: 300px; 
-    width: auto; 
-    display: block; 
-    margin-top: 10px;
-    margin-left: auto; 
-    margin-right: auto;
+  height: 300px;
+  width: auto;
+  display: block;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card-img-produit {
-    height: 150px; 
-    width: auto; 
-    display: block; 
-    margin-top: 10px;
-    margin-left: auto; 
-    margin-right: auto;
+  height: 150px;
+  width: auto;
+  display: block;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cart-img-produit {
-    height: 40px; 
-    width: auto; 
-    display: block; 
-    margin-left: auto; 
-    margin-right: auto;
+  height: 40px;
+  width: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-th , td {
-    vertical-align: middle !important;
-    padding-top: 4px !important;
-    padding-bottom: 4px !important;
+th,
+td {
+  vertical-align: middle !important;
+  padding-top: 4px !important;
+  padding-bottom: 4px !important;
 }
