--- a/shop/templates/base.html.twig
+++ b/shop/templates/base.html.twig
@@ -12,7 +12,16 @@
 </head>
 <body>
 {% include "_partials/_navbar.html.twig" %}
-{% block body %}{% endblock %}
+<div class="row container-fluid  main-div">
+    <div class="col-md-10">
+
+        {% block body %}{% endblock %}
+    </div>
+    <div class="col-md-2">
+        {% include "_partials/_top-products.html.twig" %}
+    </div>
+</div>
+
 <script src="{{ asset('js/jquery-3/jquery.slim.min.js') }}"></script>
 <script src="{{ asset('js/bootstrap-4/bootstrap.bundle.min.js') }}"></script>
 {% block javascripts %}{% endblock %}
