--- a/shop/templates/default/category.html.twig
+++ b/shop/templates/default/category.html.twig
@@ -14,7 +14,7 @@
         href="#"
       >
         <img
-          src="/images/{{ article.visuel }}"
+          src="/images/articles/{{ article.visuel }}"
           class="card-img-top"
           alt="{{ article.libelle }}"
         />
