--- a/shop/templates/_partials/_top-products.html.twig
+++ b/shop/templates/_partials/_top-products.html.twig
@@ -2,17 +2,23 @@
   <div class="card">
     <div class="card-header text-center">
       <h4>
-        <i class="fas fa-star"></i> Top Ventes <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i> Top {{'Sales' | trans }} <i class="fas fa-star"></i>
       </h4>
     </div>
     <div class="card-body">
       <ul class="list-group">
+      {% for article in articles %}
         <a href="product link">
           <li class="list-group-item text-center clickable">
-            <img src="product image" style="height: 40px" />
-            <p>name<br /><i>x Ventes</i></p>
+            <img  src="/images/articles/{{ article.visuel }}"
+                  style="height: 40px"
+                  alt="{{ article.libelle }}"
+            />
+            
+            <p>{{article.libelle}}<br /><i>{{article.totalOfOrders}} {{'Sales' | trans }}</i></p>
           </li>
         </a>
+        {% endfor %}
       </ul>
     </div>
   </div>
