--- a/shop/templates/_partials/_navbar.html.twig
+++ b/shop/templates/_partials/_navbar.html.twig
@@ -21,7 +21,7 @@
         <a class="nav-link" href="{{ path('boutique') }}"><i class="fas fa-store"></i> {{ "Shop" | trans }}</a>
       </li>
       <li class="nav-item {% if menu == 'cart' %} active {% endif %}">
-        <a class="nav-link" href="#"
+        <a class="nav-link" href="{{path('cart')}}"
           ><i class="fas fa-shopping-cart"></i> {{ "Cart" | trans }}</a
         >
       </li>
