--- a/shop/templates/default/index.html.twig
+++ b/shop/templates/default/index.html.twig
@@ -3,5 +3,17 @@
 {% block title %}Yoshop - Accueil{% endblock %}
 
 {% block body %}
-{{dump(app.request.attributes.get('_route_params'))}}
+<div class="card col-md-12">
+        <div class="card-header">
+            <h1><i class="fas fa-home"></i>Projet Symfony</h1>
+        </div>
+        <div class="card-body">
+            <a class="card" href="{{ path('boutique') }}" >
+                <img src="{{ asset('/images/epicerie.jpg') }}" class="card-img-top" alt="Logo Boutique Symfony">
+                <div class="card-body">
+                    <p class="card-text"><i>Ici rien à vendre, c'est juste pour apprendre</i></p>
+                </div>
+            </a>
+        </div>
+    </div>
 {% endblock %}
