--- a/shop/templates/base.html.twig
+++ b/shop/templates/base.html.twig
@@ -15,11 +15,20 @@
 
 <div class="row container-fluid  main-div">
     <div class="col-md-9">
-
+{% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
         {% block body %}{% endblock %}
     </div>
     <div class="col-md-3">
-        {{ render(controller('App\\Controller\\ArticleController::topSales', {'max': 3})) }}
+        {{ render(controller('App\\Controller\\DefaultController::topSales', {'max': 3})) }}
     </div>
 </div>
 
