--- a/shop/templates/default/boutique.html.twig
+++ b/shop/templates/default/boutique.html.twig
@@ -3,7 +3,7 @@
 
 <div class="card col-md-12">
   <div class="card-header">
-    <h1><i class="fas fa-store"></i> Store : ? Categories</h1>
+    <h1><i class="fas fa-store"></i> Store : {{categories|length}} Categories</h1>
   </div>
   
   <div class="card-body row">
