--- a/shop/templates/admin/orders.html.twig
+++ b/shop/templates/admin/orders.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends '@EasyAdmin/page/content.html.twig' %}
 
-{% block title %}Yoshop - Validation des commandes{% endblock %}
+{# Remove the empty header #}
+{% block content_header_wrapper %} {% endblock content_header_wrapper %}
 
-{% block body %}
-
-<div class="col-8 offset-2">
+{# The main page content block #}
+{% block main %}
   <div class="card">
     <div class="card-header">
       <h3><i class="fas fa-user-check"></i> Commandes à valider</h3>
@@ -41,7 +41,7 @@
       </table>
     </div>
   </div>
-</div>
+{% endblock main %}
 
-
-{% endblock %}
+{# Remove the empty footer #}
+{% block content_footer_wrapper %} {% endblock content_footer_wrapper %}
